--- a/index.html
+++ b/index.html
@@ -147,6 +147,22 @@
         }
       }
 
+      @keyframes float {
+        0%, 100% { transform: translateY(0px); }
+        50% { transform: translateY(-10px); }
+      }
+
+      @keyframes pulse-glow {
+        0%, 100% { box-shadow: 0 0 20px var(--accent), 0 0 40px transparent; }
+        50% { box-shadow: 0 0 30px var(--accent), 0 0 60px var(--accent); }
+      }
+
+      @keyframes gradient-shift {
+        0% { background-position: 0% 50%; }
+        50% { background-position: 100% 50%; }
+        100% { background-position: 0% 50%; }
+      }
+
       /* =========================================
          UTILITIES
          ========================================= */
@@ -160,6 +176,52 @@
       .waterfall-item:nth-child(2) { animation-delay: 0.4s; }
       .waterfall-item:nth-child(3) { animation-delay: 0.5s; }
       .waterfall-item:nth-child(4) { animation-delay: 0.6s; }
+
+      /* Smooth Scroll */
+      html {
+        scroll-behavior: smooth;
+      }
+
+      /* Custom Scrollbar */
+      ::-webkit-scrollbar {
+        width: 8px;
+      }
+      ::-webkit-scrollbar-track {
+        background: var(--bg-main);
+      }
+      ::-webkit-scrollbar-thumb {
+        background: var(--border-color);
+        border-radius: 4px;
+      }
+      ::-webkit-scrollbar-thumb:hover {
+        background: var(--text-muted);
+      }
+
+      /* Selection */
+      ::selection {
+        background: var(--accent);
+        color: white;
+      }
+
+      /* Focus Ring */
+      *:focus-visible {
+        outline: 2px solid var(--accent);
+        outline-offset: 2px;
+      }
+
+      /* Line Clamp Utility */
+      .line-clamp-1 {
+        display: -webkit-box;
+        -webkit-line-clamp: 1;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+      }
+      .line-clamp-2 {
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+      }
 
     </style>
 </head>
