fix: separate Home/Work views, restore images, update branding to PortifolioX

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
       content="Leul Tewodros - Full Stack Engineer | Building scalable, accessible, and high-performance digital products"
     />
     <meta name="author" content="Leul Tewodros" />
-    <meta property="og:title" content="Leul Tewodros | PortfolioX" />
+    <meta property="og:title" content="Leul Tewodros | PortifolioX" />
     <meta property="og:description" content="Full Stack Engineer specializing in AI, Web Development, and Mobile Apps" />
     <meta property="og:image" content="/images/leul-profile.webp" />
-    <title>Leul Tewodros | PortfolioX</title>
+    <title>Leul Tewodros | PortifolioX</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;800;900&display=swap" rel="stylesheet">
@@ -218,12 +218,14 @@
       .line-clamp-1 {
         display: -webkit-box;
         -webkit-line-clamp: 1;
+        line-clamp: 1;
         -webkit-box-orient: vertical;
         overflow: hidden;
       }
       .line-clamp-2 {
         display: -webkit-box;
         -webkit-line-clamp: 2;
+        line-clamp: 2;
         -webkit-box-orient: vertical;
         overflow: hidden;
       }
