--- a/index.html
+++ b/index.html
@@ -80,7 +80,33 @@
       }
 
       /* 
-       * 2. SHARED ELEMENT MORPH 
+       * 2. HERO PROFILE MORPH (Home -> Work header)
+       */
+      ::view-transition-group(hero-profile) {
+        z-index: 200;
+        animation-duration: 0.6s;
+        animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+      }
+      
+      ::view-transition-old(hero-profile),
+      ::view-transition-new(hero-profile) {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 50%;
+      }
+
+      /* 
+       * 3. HERO TITLE MORPH
+       */
+      ::view-transition-group(hero-title) {
+        z-index: 100;
+        animation-duration: 0.5s;
+        animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+      }
+
+      /* 
+       * 4. PROJECT IMAGE MORPH 
        */
       ::view-transition-group(project-image-*) {
         z-index: 100;
