--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         background-color: var(--bg-main);
         color: var(--text-primary);
         overflow: hidden;
-        transition: background-color 0.5s var(--ease-out-expo), color 0.5s var(--ease-out-expo);
+        transition: background-color 0.15s ease-out, color 0.15s ease-out;
       }
 
       /* =========================================
